--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           cd forked-repo
           git remote -v
-          git push origin main --force
+          gh repo push origin main --force
 
       - name: Create a Pull Request
         run: |
