--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -48,5 +48,6 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
+          cd forked-repo
           git status
           gh pr create --title "Automated PR from GitHub Actions" --body "This PR was created automatically by GitHub Actions." --head garyjyao:my-feature-branch --base main --repo bonsaieng/test-flask-app
